Working on XMM-LSS
#4

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2.2_Merging_low_memory.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2.2_Merging_low_memory.ipynb
@@ -782,7 +782,7 @@
     "spies_moc = MOC(filename=\"../../dmu0/dmu0_SpIES/data/SpIES_ch1andch2_HELP-coverage_MOC.fits\")\n",
     "decals_moc = MOC(filename=\"../../dmu0/dmu0_DECaLS/data/DECaLS_Herschel-Stripe-82_MOC.fits\")\n",
     "rcs_moc = MOC(filename=\"../../dmu0/dmu0_RCSLenS/data/RCSLenS_Herschel-Stripe-82_MOC.fits\")\n",
-    "#sdss_moc = MOC(filename=\"../../dmu0/dmu0_SDSS-S82/data/Novemner??_MOC.fits\")\n",
+    "#sdss_moc = MOC(filename=\"../../dmu0/dmu0_SDSS-S82/data/dmu0_SDSS-S82_MOC.fits\")\n",
     "sdss_moc = MOC(filename=\"../../dmu0/dmu0_IAC_Stripe82_Legacy_Project/data/dmu0_IAC_Stripe82_Legacy_Project_MOC.fits\")"
    ]
   },
