--- a/dmu1/dmu1_ml_XMM-LSS/2.2_UKIDSS_merge.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.2_UKIDSS_merge.ipynb
@@ -65,14 +65,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "TMP_DIR = os.environ.get('TMP_DIR', \"./data_tmp\")\n",
     "OUT_DIR = os.environ.get('OUT_DIR', \"./data\")\n",
-    "SUFFIX = os.environ.get('SUFFIX', time.strftime(\"_%Y%m%d\"))\n",
+    "SUFFIX = '' # os.environ.get('SUFFIX', time.strftime(\"_%Y%m%d\"))\n",
     "\n",
     "try:\n",
     "    os.makedirs(OUT_DIR)\n",
@@ -233,7 +231,7 @@
      "data": {
       "text/html": [
        "&lt;Table length=10&gt;\n",
-       "<table id=\"table4744223264-402195\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4768201360-154881\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>dxs_id</th><th>ra</th><th>dec</th><th>m_ap_ukidss_j</th><th>merr_ap_ukidss_j</th><th>m_ukidss_j</th><th>merr_ukidss_j</th><th>m_ap_ukidss_k</th><th>merr_ap_ukidss_k</th><th>m_ukidss_k</th><th>merr_ukidss_k</th><th>dxs_stellarity</th><th>f_ap_ukidss_j</th><th>ferr_ap_ukidss_j</th><th>f_ukidss_j</th><th>ferr_ukidss_j</th><th>flag_ukidss_j</th><th>f_ap_ukidss_k</th><th>ferr_ap_ukidss_k</th><th>f_ukidss_k</th><th>ferr_ukidss_k</th><th>flag_ukidss_k</th><th>dxs_flag_cleaned</th><th>dxs_flag_gaia</th><th>flag_merged</th><th>uds_id</th><th>m_ap_uds_j</th><th>merr_ap_uds_j</th><th>m_uds_j</th><th>merr_uds_j</th><th>m_ap_uds_h</th><th>merr_ap_uds_h</th><th>m_uds_h</th><th>merr_uds_h</th><th>m_ap_uds_k</th><th>merr_ap_uds_k</th><th>m_uds_k</th><th>merr_uds_k</th><th>uds_stellarity</th><th>f_ap_uds_j</th><th>ferr_ap_uds_j</th><th>f_uds_j</th><th>ferr_uds_j</th><th>flag_uds_j</th><th>f_ap_uds_h</th><th>ferr_ap_uds_h</th><th>f_uds_h</th><th>ferr_uds_h</th><th>flag_uds_h</th><th>f_ap_uds_k</th><th>ferr_ap_uds_k</th><th>f_uds_k</th><th>ferr_uds_k</th><th>flag_uds_k</th><th>uds_flag_cleaned</th><th>uds_flag_gaia</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<tr><td>0</td><td>446679621523</td><td>35.5523293864</td><td>-3.89660860231</td><td>11.3550081253</td><td>0.000288982642815</td><td>9.84205055237</td><td>0.000124145561131</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>0.899999976158</td><td>104230.921875</td><td>27.742401123</td><td>419932.625</td><td>48.0160560608</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>False</td><td>3</td><td>False</td><td>-1</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>False</td><td>0</td></tr>\n",
@@ -269,14 +267,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table4744223264-402195').dataTable()\");\n",
+       "    console.log(\"$('#table4768201360-154881').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table4744223264-402195').dataTable({\n",
+       "    $('#table4768201360-154881').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -309,12 +307,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "master_catalogue.add_column(Column(data=(np.char.array(master_catalogue['dxs_id'].astype(str)) \n",
     "                                    +  np.char.array(master_catalogue['uds_id'].astype(str) )), \n",
-    "                              name=\"wfcam_intid\"))\n",
+    "                              name=\"ukidss_intid\"))\n",
     "\n"
    ]
   },
@@ -327,7 +327,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['dxs_id', 'uds_id', 'wfcam_intid']\n"
+      "['dxs_id', 'uds_id', 'ukidss_intid']\n"
      ]
     }
    ],
@@ -362,22 +362,10 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'help_id'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-7a714656090f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0mukidss_origin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m \u001b[0mukidss_origin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_column\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmaster_catalogue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'help_id'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[0morigin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfull\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmaster_catalogue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'     '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'<U5'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0morigin\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mhas_uds_k\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"UDS\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/table.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m   1222\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1223\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstring_types\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1224\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1225\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minteger\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1226\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mRow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/table.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m    107\u001b[0m         \"\"\"\n\u001b[1;32m    108\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstring_types\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 109\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mOrderedDict\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    110\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minteger\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    111\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'help_id'"
-     ]
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "#Band H is only in UDS so we can simply rename it\n",
     "for col in master_catalogue.colnames:\n",
@@ -423,7 +411,7 @@
     "\n",
     "\n",
     "ukidss_origin = Table()\n",
-    "ukidss_origin.add_column(master_catalogue['help_id'])\n",
+    "ukidss_origin.add_column(master_catalogue['ukidss_intid'])\n",
     "origin = np.full(len(master_catalogue), '     ', dtype='<U5')\n",
     "origin[has_uds_k] = \"UDS\"\n",
     "origin[has_ukidss_k] = \"DXS\"\n",
@@ -446,20 +434,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "for col in master_catalogue.colnames:\n",
-    "    if 'ukidss' in col:\n",
-    "        master_catalogue[col].name = col.replace('ukidss', 'wfcam') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['dxs_id',\n",
+       " 'ra',\n",
+       " 'dec',\n",
+       " 'm_ap_ukidss_j',\n",
+       " 'merr_ap_ukidss_j',\n",
+       " 'm_ukidss_j',\n",
+       " 'merr_ukidss_j',\n",
+       " 'm_ap_ukidss_k',\n",
+       " 'merr_ap_ukidss_k',\n",
+       " 'm_ukidss_k',\n",
+       " 'merr_ukidss_k',\n",
+       " 'dxs_stellarity',\n",
+       " 'f_ap_ukidss_j',\n",
+       " 'ferr_ap_ukidss_j',\n",
+       " 'f_ukidss_j',\n",
+       " 'ferr_ukidss_j',\n",
+       " 'flag_ukidss_j',\n",
+       " 'f_ap_ukidss_k',\n",
+       " 'ferr_ap_ukidss_k',\n",
+       " 'f_ukidss_k',\n",
+       " 'ferr_ukidss_k',\n",
+       " 'flag_ukidss_k',\n",
+       " 'dxs_flag_cleaned',\n",
+       " 'dxs_flag_gaia',\n",
+       " 'flag_merged',\n",
+       " 'uds_id',\n",
+       " 'm_ap_ukidss_h',\n",
+       " 'merr_ap_ukidss_h',\n",
+       " 'm_ukidss_h',\n",
+       " 'merr_ukidss_h',\n",
+       " 'uds_stellarity',\n",
+       " 'f_ap_ukidss_h',\n",
+       " 'ferr_ap_ukidss_h',\n",
+       " 'f_ukidss_h',\n",
+       " 'ferr_ukidss_h',\n",
+       " 'flag_ukidss_h',\n",
+       " 'uds_flag_cleaned',\n",
+       " 'uds_flag_gaia',\n",
+       " 'ukidss_intid']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "master_catalogue.colnames"
    ]
@@ -484,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -506,9 +532,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing columns: {'dxs_stellarity', 'uds_stellarity', 'uds_flag_gaia', 'dxs_id', 'ukidss_intid', 'uds_flag_cleaned', 'uds_id', 'dxs_flag_gaia', 'dxs_flag_cleaned'}\n"
+     ]
+    }
+   ],
    "source": [
     "# We check for columns in the master catalogue that we will not save to disk.\n",
     "print(\"Missing columns: {}\".format(set(master_catalogue.colnames) - set(columns)))"
@@ -516,13 +550,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "master_catalogue.write(\"{}/wfcam_merged_catalogue_xmm-lss{}.fits\".format(TMP_DIR, SUFFIX), overwrite = True)"
+    "master_catalogue.write(\"{}/ukidss_merged_catalogue_xmm-lss{}.fits\".format(TMP_DIR, SUFFIX), overwrite = True)"
    ]
   }
  ],
