--- a/dmu1/dmu1_ml_XMM-LSS/2.2_UKIDSS_merge.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.2_UKIDSS_merge.ipynb
@@ -65,12 +65,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "TMP_DIR = os.environ.get('TMP_DIR', \"./data_tmp\")\n",
     "OUT_DIR = os.environ.get('OUT_DIR', \"./data\")\n",
-    "SUFFIX = '' # os.environ.get('SUFFIX', time.strftime(\"_%Y%m%d\"))\n",
+    "SUFFIX = os.environ.get('SUFFIX', time.strftime(\"_%Y%m%d\"))\n",
     "\n",
     "try:\n",
     "    os.makedirs(OUT_DIR)\n",
@@ -225,14 +227,28 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Since this is not the final merged catalogue. We rename column names to make them unique\n",
+    "master_catalogue['ra'].name = 'ukidss_ra'\n",
+    "master_catalogue['dec'].name = 'ukidss_dec'\n",
+    "master_catalogue['flag_merged'].name = 'ukidss_flag_merged'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "&lt;Table length=10&gt;\n",
-       "<table id=\"table4768201360-154881\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>idx</th><th>dxs_id</th><th>ra</th><th>dec</th><th>m_ap_ukidss_j</th><th>merr_ap_ukidss_j</th><th>m_ukidss_j</th><th>merr_ukidss_j</th><th>m_ap_ukidss_k</th><th>merr_ap_ukidss_k</th><th>m_ukidss_k</th><th>merr_ukidss_k</th><th>dxs_stellarity</th><th>f_ap_ukidss_j</th><th>ferr_ap_ukidss_j</th><th>f_ukidss_j</th><th>ferr_ukidss_j</th><th>flag_ukidss_j</th><th>f_ap_ukidss_k</th><th>ferr_ap_ukidss_k</th><th>f_ukidss_k</th><th>ferr_ukidss_k</th><th>flag_ukidss_k</th><th>dxs_flag_cleaned</th><th>dxs_flag_gaia</th><th>flag_merged</th><th>uds_id</th><th>m_ap_uds_j</th><th>merr_ap_uds_j</th><th>m_uds_j</th><th>merr_uds_j</th><th>m_ap_uds_h</th><th>merr_ap_uds_h</th><th>m_uds_h</th><th>merr_uds_h</th><th>m_ap_uds_k</th><th>merr_ap_uds_k</th><th>m_uds_k</th><th>merr_uds_k</th><th>uds_stellarity</th><th>f_ap_uds_j</th><th>ferr_ap_uds_j</th><th>f_uds_j</th><th>ferr_uds_j</th><th>flag_uds_j</th><th>f_ap_uds_h</th><th>ferr_ap_uds_h</th><th>f_uds_h</th><th>ferr_uds_h</th><th>flag_uds_h</th><th>f_ap_uds_k</th><th>ferr_ap_uds_k</th><th>f_uds_k</th><th>ferr_uds_k</th><th>flag_uds_k</th><th>uds_flag_cleaned</th><th>uds_flag_gaia</th></tr></thead>\n",
+       "<table id=\"table4524300496-65840\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>idx</th><th>dxs_id</th><th>ukidss_ra</th><th>ukidss_dec</th><th>m_ap_ukidss_j</th><th>merr_ap_ukidss_j</th><th>m_ukidss_j</th><th>merr_ukidss_j</th><th>m_ap_ukidss_k</th><th>merr_ap_ukidss_k</th><th>m_ukidss_k</th><th>merr_ukidss_k</th><th>dxs_stellarity</th><th>f_ap_ukidss_j</th><th>ferr_ap_ukidss_j</th><th>f_ukidss_j</th><th>ferr_ukidss_j</th><th>flag_ukidss_j</th><th>f_ap_ukidss_k</th><th>ferr_ap_ukidss_k</th><th>f_ukidss_k</th><th>ferr_ukidss_k</th><th>flag_ukidss_k</th><th>dxs_flag_cleaned</th><th>dxs_flag_gaia</th><th>ukidss_flag_merged</th><th>uds_id</th><th>m_ap_uds_j</th><th>merr_ap_uds_j</th><th>m_uds_j</th><th>merr_uds_j</th><th>m_ap_uds_h</th><th>merr_ap_uds_h</th><th>m_uds_h</th><th>merr_uds_h</th><th>m_ap_uds_k</th><th>merr_ap_uds_k</th><th>m_uds_k</th><th>merr_uds_k</th><th>uds_stellarity</th><th>f_ap_uds_j</th><th>ferr_ap_uds_j</th><th>f_uds_j</th><th>ferr_uds_j</th><th>flag_uds_j</th><th>f_ap_uds_h</th><th>ferr_ap_uds_h</th><th>f_uds_h</th><th>ferr_uds_h</th><th>flag_uds_h</th><th>f_ap_uds_k</th><th>ferr_ap_uds_k</th><th>f_uds_k</th><th>ferr_uds_k</th><th>flag_uds_k</th><th>uds_flag_cleaned</th><th>uds_flag_gaia</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<tr><td>0</td><td>446679621523</td><td>35.5523293864</td><td>-3.89660860231</td><td>11.3550081253</td><td>0.000288982642815</td><td>9.84205055237</td><td>0.000124145561131</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>0.899999976158</td><td>104230.921875</td><td>27.742401123</td><td>419932.625</td><td>48.0160560608</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>False</td><td>3</td><td>False</td><td>-1</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>False</td><td>0</td></tr>\n",
        "<tr><td>1</td><td>446679652426</td><td>35.5348871949</td><td>-3.71725661147</td><td>11.4726924896</td><td>0.000298160797684</td><td>11.3987607956</td><td>0.000252233905485</td><td>12.2191505432</td><td>0.000333435629727</td><td>12.4362030029</td><td>0.000336990662618</td><td>0.993865013123</td><td>93523.953125</td><td>25.6831951141</td><td>100114.164062</td><td>23.2581233978</td><td>False</td><td>47026.1757812</td><td>14.4420013428</td><td>38505.1289062</td><td>11.9512176514</td><td>False</td><td>False</td><td>3</td><td>False</td><td>-1</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>nan</td><td>nan</td><td>nan</td><td>nan</td><td>False</td><td>False</td><td>0</td></tr>\n",
@@ -267,14 +283,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table4768201360-154881').dataTable()\");\n",
+       "    console.log(\"$('#table4524300496-65840').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table4768201360-154881').dataTable({\n",
+       "    $('#table4524300496-65840').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -288,7 +304,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -320,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -433,64 +449,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['dxs_id',\n",
-       " 'ra',\n",
-       " 'dec',\n",
-       " 'm_ap_ukidss_j',\n",
-       " 'merr_ap_ukidss_j',\n",
-       " 'm_ukidss_j',\n",
-       " 'merr_ukidss_j',\n",
-       " 'm_ap_ukidss_k',\n",
-       " 'merr_ap_ukidss_k',\n",
-       " 'm_ukidss_k',\n",
-       " 'merr_ukidss_k',\n",
-       " 'dxs_stellarity',\n",
-       " 'f_ap_ukidss_j',\n",
-       " 'ferr_ap_ukidss_j',\n",
-       " 'f_ukidss_j',\n",
-       " 'ferr_ukidss_j',\n",
-       " 'flag_ukidss_j',\n",
-       " 'f_ap_ukidss_k',\n",
-       " 'ferr_ap_ukidss_k',\n",
-       " 'f_ukidss_k',\n",
-       " 'ferr_ukidss_k',\n",
-       " 'flag_ukidss_k',\n",
-       " 'dxs_flag_cleaned',\n",
-       " 'dxs_flag_gaia',\n",
-       " 'flag_merged',\n",
-       " 'uds_id',\n",
-       " 'm_ap_ukidss_h',\n",
-       " 'merr_ap_ukidss_h',\n",
-       " 'm_ukidss_h',\n",
-       " 'merr_ukidss_h',\n",
-       " 'uds_stellarity',\n",
-       " 'f_ap_ukidss_h',\n",
-       " 'ferr_ap_ukidss_h',\n",
-       " 'f_ukidss_h',\n",
-       " 'ferr_ukidss_h',\n",
-       " 'flag_ukidss_h',\n",
-       " 'uds_flag_cleaned',\n",
-       " 'uds_flag_gaia',\n",
-       " 'ukidss_intid']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "master_catalogue.colnames"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -510,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -532,14 +490,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Missing columns: {'dxs_stellarity', 'uds_stellarity', 'uds_flag_gaia', 'dxs_id', 'ukidss_intid', 'uds_flag_cleaned', 'uds_id', 'dxs_flag_gaia', 'dxs_flag_cleaned'}\n"
+      "Missing columns: {'uds_flag_cleaned', 'ukidss_intid', 'uds_stellarity', 'ukidss_dec', 'dxs_stellarity', 'dxs_flag_gaia', 'dxs_id', 'uds_flag_gaia', 'uds_id', 'dxs_flag_cleaned', 'ukidss_flag_merged', 'ukidss_ra'}\n"
      ]
     }
    ],
@@ -550,13 +508,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "master_catalogue.write(\"{}/ukidss_merged_catalogue_xmm-lss{}.fits\".format(TMP_DIR, SUFFIX), overwrite = True)"
+    "master_catalogue.write(\"{}/ukidss_merged_catalogue_xmm-lss.fits\".format(TMP_DIR), overwrite = True)"
    ]
   }
  ],
