XMM-LSS ready to run on Vulcain
Fingers crossed #4

--- a/dmu1/dmu1_ml_Bootes/1.0_Brown_Reformatting.ipynb
+++ b/dmu1/dmu1_ml_Bootes/1.0_Brown_Reformatting.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -823,7 +825,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "merged_catalogue.add_column(Column(gen_help_id(merged_catalogue['ra'], merged_catalogue['dec']),\n",
@@ -855,13 +859,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "merged_catalogue['help_id',  'id'].write(\n",
-    "    \"{}/master_list_cross_ident_bootes{}.fits\".format(OUT_DIR, SUFFIX))\n",
-    "merged_catalogue.remove_columns(['id'])"
+    "#merged_catalogue['help_id',  'id'].write(\n",
+    "#    \"{}/master_list_cross_ident_bootes{}.fits\".format(OUT_DIR, SUFFIX))\n",
+    "#merged_catalogue.remove_columns(['id'])"
    ]
   },
   {
