--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.9_RCSLenS.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.9_RCSLenS.ipynb
@@ -191,11 +191,10 @@
     "        errcol = \"merr{}\".format(col[1:])\n",
     "        flux, error = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
     "           \n",
-    "        # -99.0 or 99.0 is used for missing values\n",
-    "        catalogue[col][catalogue[col] > 90.] = np.nan\n",
-    "        catalogue[errcol][catalogue[errcol] > 90.] = np.nan\n",
-    "        catalogue[col][catalogue[col] < -90.] = np.nan\n",
-    "        catalogue[errcol][catalogue[errcol] < -90.] = np.nan        \n",
+    "        # Remove missing values (-99, 99?) and extreme magnitudes (see above).\n",
+    "        mask = (catalogue[col] < 0) | (catalogue[col] > 80)\n",
+    "        catalogue[col][mask] = np.nan\n",
+    "        catalogue[errcol][mask] = np.nan       \n",
     "        \n",
     "        # Fluxes are added in µJy\n",
     "        catalogue.add_column(Column(flux * 1.e6, name=\"f{}\".format(col[1:])))\n",
