--- a/dmu1/dmu1_ml_XMM-LSS/2.6_Merging_low_memory.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.6_Merging_low_memory.ipynb
@@ -1411,7 +1411,7 @@
     }
    ],
    "source": [
-    "split_length = 10000 #number of sources to include in every sub catalogue\n",
+    "split_length = 100000 #number of sources to include in every sub catalogue\n",
     "num_files = int(np.ceil(len(master_catalogue)/split_length))\n",
     "print(num_files)\n"
    ]
@@ -1609,23 +1609,51 @@
     "        \n",
     "        \n",
     "    nb_optical_flux = (\n",
-    "        1 * ~np.isnan(sub_catalogue['f_suprime_g']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_suprime_r']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_suprime_i']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_suprime_z']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_suprime_y']) +\n",
-    "        \n",
-    "        1 * ~np.isnan(sub_catalogue['f_gpc1_g']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_gpc1_r']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_gpc1_i']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_gpc1_z']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_gpc1_y'])\n",
+    "        # CANDELS\n",
+    "        1 * ~np.isnan(master_catalogue['f_candels_f140w']) + \n",
+    "        1 * ~np.isnan(master_catalogue['f_candels_f160w']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_candels_f606w']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_candels_f814w']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_candels_f125w']) +\n",
+    "        # DECaLS\n",
+    "        1 * ~np.isnan(master_catalogue['f_decam_g']) + \n",
+    "        1 * ~np.isnan(master_catalogue['f_decam_r']) +\n",
+    "        #1 * ~np.isnan(master_catalogue['f_decam_i']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_decam_z']) +\n",
+    "        # 1 * ~np.isnan(master_catalogue['f_decam_y']) +\n",
+    "        # HSC\n",
+    "        1 * ~np.isnan(master_catalogue['f_suprime_g']) + \n",
+    "        1 * ~np.isnan(master_catalogue['f_suprime_r']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_suprime_i']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_suprime_z']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_suprime_y']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_suprime_n921']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_suprime_n816']) +\n",
+    "        # PanSTARRS\n",
+    "        1 * ~np.isnan(master_catalogue['f_gpc1_g']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_gpc1_r']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_gpc1_i']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_gpc1_z']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_gpc1_y']) +\n",
+    "        # CFHT\n",
+    "        1 * ~np.isnan(master_catalogue['f_megacam_u']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_megacam_g']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_megacam_r']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_megacam_z']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_megacam_y']) \n",
     "    )\n",
     "\n",
     "    nb_nir_flux = (\n",
-    "        1 * ~np.isnan(sub_catalogue['f_ukidss_j']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_ukidss_h']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_ukidss_k']) \n",
+    "        # UKIDSS\n",
+    "        1 * ~np.isnan(master_catalogue['f_ukidss_j']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_ukidss_h']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_ukidss_k']) +\n",
+    "        # VISTA\n",
+    "        1 * ~np.isnan(master_catalogue['f_vista_z']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_vista_y']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_vista_j']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_vista_h']) +\n",
+    "        1 * ~np.isnan(master_catalogue['f_vista_k'])\n",
     "    )\n",
     "\n",
     "    nb_mir_flux = (\n",
