add dtype on boolean arrays
Notebooks ran on mac but not vulcain due to numpy defaults #4

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.2_VISTA-VHS.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.2_VISTA-VHS.ipynb
@@ -76,7 +76,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "OUT_DIR =  os.environ.get('TMP_DIR', \"./data_tmp\")\n",
@@ -99,7 +101,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Bands: Y,J,H,K\n",
@@ -139,8 +143,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Conversion from Vega magnitudes to AB is done using values from \n",
+    "# http://casu.ast.cam.ac.uk/surveys-projects/vista/technical/filter-set\n",
+    "vega_to_ab = {\n",
+    "    \"z\": 0.521,\n",
+    "    \"y\": 0.618,\n",
+    "    \"j\": 0.937,\n",
+    "    \"h\": 1.384,\n",
+    "    \"k\": 1.839\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Adding flux and band-flag columns\n",
@@ -153,7 +178,9 @@
     "        catalogue[col][catalogue[col] <= 0] = np.nan\n",
     "        catalogue[errcol][catalogue[errcol] <= 0] = np.nan  \n",
     "        \n",
-    "\n",
+    "        # Convert magnitude from Vega to AB\n",
+    "        catalogue[col] += vega_to_ab[col[-1]]\n",
+    "        \n",
     "        flux, error = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
     "        \n",
     "        # Fluxes are added in µJy\n",
@@ -298,7 +325,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gaia = Table.read(\"../../dmu0/dmu0_GAIA/data/GAIA_Herschel-Stripe-82.fits\")\n",
@@ -363,7 +392,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue[RA_COL] +=  delta_ra.to(u.deg)\n",
@@ -411,7 +442,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue.add_column(\n",
@@ -456,7 +489,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue.write(\"{}/VISTA-VHS.fits\".format(OUT_DIR), overwrite=True)"
