--- a/dmu1/dmu1_ml_XMM-LSS/2.1_Megacam_merge.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.1_Megacam_merge.ipynb
@@ -462,11 +462,11 @@
     "    # Megacam total flux \n",
     "    has_cfhtls_deep = ~np.isnan(master_catalogue['f_cfhtls-deep_' + band])\n",
     "    if band == 'y':\n",
-    "        has_cfhtls_wide = np.full(len(master_catalogue), False)\n",
+    "        has_cfhtls_wide = np.full(len(master_catalogue), False, dtype=bool)\n",
     "    else:\n",
     "        has_cfhtls_wide = ~np.isnan(master_catalogue['f_cfhtls-wide_' + band])\n",
     "    if band == 'i':\n",
-    "        has_sparcs = np.full(len(master_catalogue), False)\n",
+    "        has_sparcs = np.full(len(master_catalogue), False, dtype=bool)\n",
     "    else:\n",
     "        has_sparcs = ~np.isnan(master_catalogue['f_sparcs_' + band])\n",
     "    \n",
