--- a/dmu1/dmu1_ml_XMM-LSS/2.4_VIRCAM_merge.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.4_VIRCAM_merge.ipynb
@@ -473,7 +473,7 @@
     "    has_video = ~np.isnan(master_catalogue['f_video_' + band])\n",
     "    has_viking = ~np.isnan(master_catalogue['f_viking_' + band])\n",
     "    if band == 'z':\n",
-    "        has_vhs = np.full(len(master_catalogue), False)\n",
+    "        has_vhs = np.full(len(master_catalogue), False, dtype=bool)\n",
     "    else:\n",
     "        has_vhs = ~np.isnan(master_catalogue['f_vhs_' + band])\n",
     "    \n",
@@ -563,7 +563,7 @@
     "    has_ap_video = ~np.isnan(master_catalogue['f_ap_video_' + band])\n",
     "    has_ap_viking = ~np.isnan(master_catalogue['f_ap_viking_' + band])\n",
     "    if (band == 'z'):\n",
-    "        has_ap_vhs = np.full(len(master_catalogue), False)\n",
+    "        has_ap_vhs = np.full(len(master_catalogue), False, dtype=bool)\n",
     "    else:\n",
     "        has_ap_vhs = ~np.isnan(master_catalogue['f_ap_vhs_' + band])\n",
     "\n",
@@ -744,7 +744,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vista_origin.write(\"{}/xmm-lss_vista_fluxes_origins{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
