Adding more dtype=bool to XMM-LSS
#4

--- a/dmu1/dmu1_ml_XMM-LSS/2.1_Megacam_merge.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.1_Megacam_merge.ipynb
@@ -550,11 +550,11 @@
     "    # Megacam aperture flux \n",
     "    has_ap_cfhtls_deep = ~np.isnan(master_catalogue['f_ap_cfhtls-deep_' + band])\n",
     "    if band == 'y':\n",
-    "        has_ap_cfhtls_wide = np.full(len(master_catalogue), False)\n",
+    "        has_ap_cfhtls_wide = np.full(len(master_catalogue), False, dtype=bool)\n",
     "    else:\n",
     "        has_ap_cfhtls_wide = ~np.isnan(master_catalogue['f_ap_cfhtls-wide_' + band])\n",
     "    if band == 'i':\n",
-    "        has_ap_sparcs = np.full(len(master_catalogue), False)\n",
+    "        has_ap_sparcs = np.full(len(master_catalogue), False, dtype=bool)\n",
     "    else:\n",
     "        has_ap_sparcs = ~np.isnan(master_catalogue['f_ap_sparcs_' + band])\n",
     "    \n",
