Remove unused id columns which interfere with join
#4

--- a/dmu1/dmu1_ml_XMM-LSS/2.6_Merging_low_memory.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.6_Merging_low_memory.ipynb
@@ -1418,7 +1418,7 @@
     "#Sort catalogue by HELP id so that it is split up in RA strips\n",
     "master_catalogue.sort('help_id')\n",
     "#Remove all the old ids as they interfere with join\n",
-    "master_catalogue.remove_columns(\n",
+    "master_catalogue.remove_columns([\n",
     " 'cfhtls-wide_id',\n",
     " 'cfhtls-deep_id',\n",
     " 'sparcs_intid',\n",
@@ -1435,7 +1435,7 @@
     " 'viking_id',\n",
     "\n",
     " 'servs_intid',\n",
-    " 'swire_intid',\n",
+    " 'swire_intid']\n",
     ")"
    ]
   },
