--- a/dmu1/dmu1_ml_XMM-LSS/2.6_Merging_low_memory.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2.6_Merging_low_memory.ipynb
@@ -1353,10 +1353,11 @@
     "        1 * ~np.isnan(sub_catalogue['f_ukidss_h']) +\n",
     "        1 * ~np.isnan(sub_catalogue['f_ukidss_k']) +\n",
     "        # VISTA\n",
-    "        1 * ~np.isnan(sub_catalogue['f_vista_y']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_vista_j']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_vista_h']) +\n",
-    "        1 * ~np.isnan(sub_catalogue['f_vista_k'])\n",
+    "        1 * ~np.isnan(sub_catalogue['f_vircam_z']) +\n",
+    "        1 * ~np.isnan(sub_catalogue['f_vircam_y']) +\n",
+    "        1 * ~np.isnan(sub_catalogue['f_vircam_j']) +\n",
+    "        1 * ~np.isnan(sub_catalogue['f_vircam_h']) +\n",
+    "        1 * ~np.isnan(sub_catalogue['f_vircam_k'])\n",
     "    )\n",
     "\n",
     "    nb_mir_flux = (\n",
