COSMOS ready to run on Vulcain
Still need to convert the official cosmos catalogeu to HELP format #2

--- a/dmu1/dmu1_ml_COSMOS/1.7_UKIDSS-LAS.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/1.7_UKIDSS-LAS.ipynb
@@ -114,7 +114,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Is the following standard (different names for radec vs mag)?\n",
@@ -156,7 +158,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Adding flux and band-flag columns\n",
