--- a/dmu1/dmu1_ml_Bootes/2_HELP_Merging.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2_HELP_Merging.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -868,6 +870,10 @@
     "    1 * ~np.isnan(master_catalogue['f_bass_g']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_bass_r']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_bass_z']) +\n",
+    "    \n",
+    "    1 * ~np.isnan(master_catalogue['f_decam_g']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_decam_r']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_decam_z']) +\n",
     "\n",
     "    1 * ~np.isnan(master_catalogue['f_gpc1_g']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_gpc1_r']) +\n",
@@ -1080,10 +1086,12 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "master_catalogue[columns].write(\"{}/HELP_master_catalogue_bootes{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
+    "master_catalogue[columns].write(\"{}/master_catalogue_bootes_help{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
    ]
   }
  ],
